--- a/django_project/list_difference/templates/list_difference/form_custom_textarea.html
+++ b/django_project/list_difference/templates/list_difference/form_custom_textarea.html
@@ -8,10 +8,10 @@
 		<form method="POST" class="post-form">  
 	        {% csrf_token %}  
 	        <div class="form-row">
-	        	<div class="form-group col-md-6 mb-0">
+	        	<div style="text-align: center" class="form-group col-md-6 mb-0">
 	        		{{ form.listA|as_crispy_field }}
 	        	</div>
-	        	<div class="form-group col-md-6 mb-0">
+	        	<div style="text-align: center" class="form-group col-md-6 mb-0">
 	        		{{ form.listB|as_crispy_field }}
 	        	</div>
 	        </div>
