Fixed other views

--- a/django_project/list_difference/templates/list_difference/form_list.html
+++ b/django_project/list_difference/templates/list_difference/form_list.html
@@ -55,8 +55,10 @@
 
 				<hr/>
 
-				<textarea cols="40" rows="10">{{ out.ABC }}</textarea>
-
+				{% if out.ABC %}
+					<textarea cols="40" rows="10">{{ out.ABC }}</textarea>
+				{% endif %}
+				
 			{% endif %}
 
 		</div>
