--- a/django_project/list_difference/templates/list_difference/base.html
+++ b/django_project/list_difference/templates/list_difference/base.html
@@ -3,7 +3,7 @@
 <html lang="en">  
     <head>  
         <meta charset="UTF-8">  
-        <title>Kraken</title>
+        <title>List App</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
 
