--- a/django_project/list_difference/templates/list_difference/form_custom_textarea.html
+++ b/django_project/list_difference/templates/list_difference/form_custom_textarea.html
@@ -4,7 +4,7 @@
 
 <div class="container-fluid">
 		
-	<div class="col">
+	<div class="col noselect">
 		<form method="POST" class="post-form">  
 	        {% csrf_token %}  
 	        <div class="form-row">
