--- a/django_project/home/templates/home/base.html
+++ b/django_project/home/templates/home/base.html
@@ -23,6 +23,9 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.7/js/mdb.min.js"></script>
         
         <style>
+            body {
+                line-height: 0
+            }
             .error{
                 color: red;
             }
