--- a/django_project/home/templates/home/homepage.html
+++ b/django_project/home/templates/home/homepage.html
@@ -4,21 +4,40 @@
 {% block content %}
 
 <script type="text/javascript">
+	// function myFunction() {
+	//     var input, filter, cards, cardContainer, h5, title, i;
+	//     input = document.getElementById("myFilter");
+	//     filter = input.value.toUpperCase();
+	//     cardContainer = document.getElementById("testitems");
+	//     cards = cardContainer.getElementsByClassName("card mb-2");
+	//     for (i = 0; i < cards.length; i++) {
+	//         title = cards[i].querySelector(".card-body h5.card-title");
+	//         if (title.innerText.toUpperCase().indexOf(filter) > -1) {
+	//             cards[i].style.display = "";
+	//         } else {
+	//             cards[i].style.display = "none";
+	//         }
+	//     }
+	// }
+
 	function myFunction() {
-    var input, filter, cards, cardContainer, h5, title, i;
-    input = document.getElementById("myFilter");
-    filter = input.value.toUpperCase();
-    cardContainer = document.getElementById("testitems");
-    cards = cardContainer.getElementsByClassName("card mb-2");
-    for (i = 0; i < cards.length; i++) {
-        title = cards[i].querySelector(".card-body h5.card-title");
-        if (title.innerText.toUpperCase().indexOf(filter) > -1) {
-            cards[i].style.display = "";
-        } else {
-            cards[i].style.display = "none";
-        }
-    }
-}
+		console.log("PRESSING")
+		var input, filter, cards, cardContainer, h5, title, i;
+	    input = document.getElementById("myFilter");
+	    filter = input.value.toUpperCase();
+	    cardContainer = document.getElementById("testitems");
+	    cards = cardContainer.getElementsByClassName("col-md-2");
+	    for (i = 0; i < cards.length; i++) {
+	        title = cards[i].querySelector(".card-body h5.card-title");
+	        if (title.innerText.toUpperCase().indexOf(filter) > -1) {
+	            cards[i].style.display = "";
+	        } else {
+	            cards[i].style.display = "none";
+	        }
+	    }
+	}
+
+	
 </script>
 
 <div class="container-fluid noselect">
@@ -37,7 +56,7 @@
 	      <input type="text" id="myFilter" class="form-control" onkeyup="myFunction()" placeholder="Search for tool..">
 	    </div>
 	</div>
-	<br/>
+	<br id="disappear"/>
 	
 
 	<div class="row" id="testitems">
@@ -46,7 +65,7 @@
 			<div class="col-md-2">
 		        <div class="card mb-2">
 		            
-		            <a href="{{ app.url }}" style="color: inherit;">
+		            <a target="_blank" href="{{ app.url }}" style="color: inherit;">
 					  <div class="card-body">
 					  	<div class="icon" style="text-align: center; color: Orange;">
 								<span style="font-size: 3em">
@@ -58,7 +77,7 @@
 					  </div>
 					</a>
 		        </div>
-		        <br/>
+		        <br id="disappear"/>
 		    </div>
 
 	    {% endfor %}
