Confirmed thoughts on multiple edits

--- a/django_project/restaurant/templates/restaurant/spreadsheet.html
+++ b/django_project/restaurant/templates/restaurant/spreadsheet.html
@@ -221,6 +221,7 @@
 				filters: true,
 				colWidths: [30,300,500,100,60,150,100,120,100,80],
 				columns: columns,
+				undo: true,
 				// Functions
 				afterGetColHeader: addInput,
 				beforeOnCellMouseDown: doNotSelectColumn,
