--- a/django_project/restaurant/templates/restaurant/spreadsheet.html
+++ b/django_project/restaurant/templates/restaurant/spreadsheet.html
@@ -53,19 +53,61 @@
 				background-color: #5bc0de;
 			}
 
-			.currentRow {
+			/*.currentRow {
 				font-style: italic;
-				/*font-weight: bold;*/
 				color: white;
 				background: grey !important;
 			}
 
 			.currentCol {
-				/*font-weight: bold;*/
+				font-style: italic;
+				color: white;
+				background: #17A2B8 !important;
+			}*/
+
+			/*.handsontable td.current {
+				background-color: orange;
+			}*/
+
+			.ht_master tr > td.current {
+				/*font-style: italic;*/
+				background: white;
+			}
+
+			.ht_master tr > td.currentCol {
 				font-style: italic;
 				color: white;
 				background: #17A2B8 !important;
 			}
+
+			.ht_master tr > td.currentRow {
+				font-style: italic;
+				color: white;
+				background: grey !important;
+			}
+
+			.ht_master tr > td.area {
+				color: white;
+				background: black;
+			}
+
+			.ht_master tr > td.area-1 {
+				background: orange;
+			}
+
+			.ht_master tr > td.area-2 {
+				background: navy;
+			}
+
+/*			.noncurrentRow {
+				color: black;
+				background: orange !important;
+			}
+
+			.noncurrentCol {
+				color: black;
+				background: blue !important;
+			}*/
 
 		</style>
 
@@ -130,7 +172,7 @@
 					</li>
 
 					<li class="nav-item">
-						<button id="printMe" type="button" class="downloadCSV btn btn-info" data-toggle="modal">Print</button>
+						<button onclick="myToggle()" id="focusToggle" type="button" class="btn btn-dark" data-toggle="modal">Toggle On</button>
 					</li>
 
 				</ul>
@@ -152,6 +194,11 @@
 		<script>
 
 			var data = {{context.data|safe}}
+
+			// var out_data = data.push([{"id":100}])
+
+			// console.log(out_data)
+			console.log(data)
 
 			var data_ct = {{context.courses|safe}}
 
@@ -183,7 +230,7 @@
 					renderer: idRenderer, data: 'dish_course.course_name', type: 'autocomplete', source: courses(data_ct)
 				},
 				{
-					renderer: idRenderer, data: 'cost', type: 'numeric', numericFormat: {pattern: '0,0.00 $'}
+					renderer: starRenderer, data: 'cost', type: 'numeric'
 				},
 				{
 					renderer: idRenderer, data: 'vegan'
@@ -205,6 +252,18 @@
 				},
 				
 			]
+
+			function roundTo(x) {
+				return Number.parseFloat(x).toFixed(2);
+			}
+
+			function starRenderer(instance, td, row, col, prop, value, cellProperties) {
+				// td.innerHTML = '&#x2605;' + value;
+				td.innerHTML = roundTo(value)
+				td.className = 'starColumn';
+				td.id = data[cellProperties["row"]]["id"];
+				return td;
+			}
 
 			// Event for `keydown` event. Add condition after delay of 200 ms which is counted from time of last pressed key.
 			var debounceFn = Handsontable.helper.debounce(function (colIndex, event) {
@@ -320,6 +379,7 @@
 								var success_ct = true
 							} else {
 								var success_ct = false
+								console.log("Cannot find course_name")
 								$(".saving").html("failed saving")
 								try {
 									$(".saving").removeClass("btn-success")
@@ -407,6 +467,7 @@
 
 									try {
 										var result = response["unsuccessful"]
+										console.log("FAILED")
 										if (result == "True") {
 											$(".saving").html("failed saving")
 											try {
@@ -475,6 +536,7 @@
 				undo: true,
 				currentRowClassName: 'currentRow',
 				currentColClassName: 'currentCol',
+				selectionMode: 'multiple',
 
 				hiddenColumns: {
 					indicators: true
@@ -491,9 +553,28 @@
 				beforeOnCellMouseDown: doNotSelectColumn,
 				afterChange: recordChanges,
 				afterRender: updateDeets,
+				afterSelection: highlightRowCol,
+
+				// columnSummary: [{
+				// 	destinationRow: 0,
+				// 	destinationColumn: 9,
+				// 	reversedRowCoords: true,
+				// 	forceNumeric: true,
+				// 	type: 'sum'
+				// },
+				// {
+				// 	destinationRow: 0,
+				// 	destinationColumn: 10,
+				// 	reversedRowCoords: true,
+				// 	forceNumeric: true,
+				// 	type: 'sum'
+				// }]
 			}
 
 			var table = new Handsontable(document.getElementById('example'), configurations);
+
+			// var hotInstance = $("#example").handsontable('getInstance');
+			// console.log(hotInstance)
 
 			var exportPlugin1 = table.getPlugin('exportFile');
 
@@ -529,6 +610,74 @@
 					rowDelimiter: '\r\n',
 					rowHeaders: true
 				});
+			});
+
+			function myToggle() {
+				var focusToggleBtn = document.getElementById('focusToggle');
+
+				if (focusToggleBtn.innerHTML == "Toggle On") {
+					focusToggleBtn.innerHTML = "Toggle Off"
+					$("#focusToggle").removeClass("btn-dark")
+					$("#focusToggle").addClass("btn-success")
+
+					table.updateSettings({
+						currentRowClassName: 'test',
+						currentColClassName: 'test',
+						colHeaders: ['ID', 'Name', 'ORANGE', 'Course', 'Cost', 'Vegan', 'Vegetarian Option', 'Gluten Free', 'Signature Dish', 'Spice Level', 'Pieces'],
+					})
+
+					const filtersPlugin = table.getPlugin('filters');
+
+					filtersPlugin.addCondition(5, 'eq', ['true']);
+					filtersPlugin.filter();
+
+					table.render();
+
+				} else {
+					focusToggleBtn.innerHTML = "Toggle On"
+					$("#focusToggle").removeClass("btn-success")
+					$("#focusToggle").addClass("btn-dark")
+
+					table.updateSettings({
+						currentRowClassName: 'currentRow',
+						currentColClassName: 'currentCol',
+						colHeaders: ['ID', 'Name', 'TURTLE', 'Course', 'Cost', 'Vegan', 'Vegetarian Option', 'Gluten Free', 'Signature Dish', 'Spice Level', 'Pieces'],
+					})
+
+					const filtersPlugin = table.getPlugin('filters');
+
+					filtersPlugin.clearConditions(5);
+					filtersPlugin.filter();
+					
+					console.log(table)
+
+					table.render();
+				}
+			}
+
+			function highlightRowCol(row, column, row2, column2, preventScrolling, selectionLayerLevel) {
+				console.log("HELLO")
+				console.log(row)
+				console.log(column)
+				console.log(row2)
+				console.log(column2)
+				console.log(selectionLayerLevel)
+			}
+
+			$( document ).ready(function() {
+				var row_count = table.getSourceData().length
+
+				table.enablePlugin()
+
+				table.alter('insert_row', row_count, 2)
+
+				table.setDataAtCell(row_count + 1,1,"TOTAL",'loadData')
+
+				table.setDataAtCell(row_count + 1,9,'=J1','loadData')
+				console.log(table.hasComputedCellValue(row_count + 1,9))
+				
+
+
 			});
 
 			table.render();
