Playing around with colour palettes

--- a/django_project/boards/templates/boards/grid/example_1.html
+++ b/django_project/boards/templates/boards/grid/example_1.html
@@ -53,7 +53,7 @@
 
 		{% for unsplash in unsplash_data %}
 			<div>			
-				<img src={{ unsplash.urls.small }}>
+				<img src={{ unsplash.photo }}>
 			</div>
 		{% endfor %}
 
